refactor(config): update .env and set backend to 8080

--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,17 @@ IntegrationsSettings__Discord__ClientId=123456789
 IntegrationsSettings__Discord__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Discord__RedirectUrl=http://localhost:4200/oauth2/discord/
 IntegrationsSettings__Discord__BotToken=ABCdefGHI123456789,OoO-09876azerty
+
 IntegrationsSettings__Notion__ClientId=123456789
 IntegrationsSettings__Notion__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Notion__RedirectUrl=http://localhost:4200/oauth2/notion/
+
 IntegrationsSettings__Github__ClientId=123456789
 IntegrationsSettings__Github__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
-IntegrationsSettings__Github__RedirectUrl=http://localhost:4200/oauth2/notion/
+IntegrationsSettings__Github__RedirectUrl=http://localhost:4200/oauth2/github   /
 
 IntegrationsSettings__Riot__ApiKey=ABCdefGHI123456789,OoO-09876azerty
+
 IntegrationsSettings__Gmail__ClientId=123456789
 IntegrationsSettings__Gmail__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Gmail__RedirectUrl=http://localhost:4200/oauth2/gmail/
