--- a/backend/Zeus.Daemon.Runner/appsettings.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.json
@@ -27,6 +27,9 @@
       "RegionalApiEndpoint": "https://europe.api.riotgames.com/",
       "DataDragonApiEndpoint": "https://ddragon.leagueoflegends.com/",
       "ApiKey": ""
+    },
+    "Gmail": {
+      "MessagesApiEndpoint": "https://gmail.googleapis.com/gmail/v1/"
     }
   },
   "GRpcApiSettings": {
